force-app/main/default/objects/Intel_Profession__c/Intel_Profession__c.object-meta.xml
<CustomObject>
    <label>Intel Profession</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intel Professions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>