force-app/main/default/objects/Intel_Profession__c/fields/Class_ID__c.field-meta.xml
<CustomField>
    <fullName>Class_ID__c</fullName>
    <label>Class ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>