force-app/main/default/objects/Intel_Profession__c/fields/Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_ID__c</fullName>
    <label>Group ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>