force-app/main/default/objects/Intel_Profession__c/fields/Intel_Profession_Name__c.field-meta.xml
<CustomField>
    <fullName>Intel_Profession_Name__c</fullName>
    <label>Intel Profession Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>