force-app/main/default/objects/Intel_Profession__c/fields/Profession_ID__c.field-meta.xml
<CustomField>
    <fullName>Profession_ID__c</fullName>
    <externalId>true</externalId>
    <label>Profession ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>